hawtbuf-proto/target/generated-sources/javacc/org/fusesource/hawtbuf/proto/compiler/parser/ProtoParser.java
/* Generated By:JavaCC: Do not edit this line. ProtoParser.java */
/**
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.fusesource.hawtbuf.proto.compiler.parser;

import org.fusesource.hawtbuf.proto.compiler.*;
import java.util.LinkedHashMap;
import java.util.ArrayList;
import java.util.Hashtable;
import java.util.Iterator;
import java.io.File;
import java.io.FileReader;
import java.io.FileNotFoundException;
import java.io.IOException;

/**
 * This class is generated with JavaCC. Do not modify manually.
 */
public class ProtoParser implements ProtoParserConstants {

  final public ProtoDescriptor ProtoDescriptor() throws ParseException {
        ProtoDescriptor proto = new ProtoDescriptor();
        String packageName=null;
    LinkedHashMap<String,OptionDescriptor> opts = new LinkedHashMap<String,OptionDescriptor>();
    LinkedHashMap<String,MessageDescriptor> messages = new LinkedHashMap<String,MessageDescriptor>();
    LinkedHashMap<String,EnumDescriptor> enums = new LinkedHashMap<String,EnumDescriptor>();
    ArrayList<MessageDescriptor> extendsList = new ArrayList<MessageDescriptor>();
    LinkedHashMap<String,ServiceDescriptor> services = new LinkedHashMap<String,ServiceDescriptor>();
    ArrayList<String> imports = new ArrayList<String>();

    OptionDescriptor optionD;
    MessageDescriptor messageD;
    EnumDescriptor enumD;
    ServiceDescriptor serviceD;
    MessageDescriptor extendD;
    String o;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PACKAGE:
        jj_consume_token(PACKAGE);
        packageName = PackageID();
        jj_consume_token(SEMICOLON);
        break;
      case OPTION:
        jj_consume_token(OPTION);
        optionD = OptionDescriptor();
        jj_consume_token(SEMICOLON);
          opts.put(optionD.getName(),optionD);
        break;
      case IMPORT:
        jj_consume_token(IMPORT);
        o = StringLitteral();
        jj_consume_token(SEMICOLON);
          imports.add((String)o);
        break;
      case MESSAGE:
        messageD = MessageDescriptor(proto, null);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
          messages.put(messageD.getName(),messageD);
        break;
      case ENUM:
        enumD = EnumDescriptor(proto, null);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
          enums.put(enumD.getName(),enumD);
        break;
      case SERVICE:
        serviceD = ServiceDescriptor(proto);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
          services.put(serviceD.getName(),serviceD);
        break;
      case EXTEND:
        extendD = ExtendDescriptor(proto, null);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
          extendsList.add(extendD);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
      case PACKAGE:
      case SERVICE:
      case OPTION:
      case MESSAGE:
      case EXTEND:
      case ENUM:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
        proto.setPackageName(packageName);
        proto.setImports(imports);
        proto.setOptions(opts);
        proto.setMessages(messages);
        proto.setEnums(enums);
        proto.setServices(services);
        proto.setExtends(extendsList);
        {if (true) return proto;}
    throw new Error("Missing return statement in function");
  }

  final public MessageDescriptor MessageDescriptor(ProtoDescriptor proto, MessageDescriptor parent) throws ParseException {
    String name;
    LinkedHashMap<String,FieldDescriptor> fields = new LinkedHashMap<String,FieldDescriptor>();
    LinkedHashMap<String,MessageDescriptor> messages = new LinkedHashMap<String,MessageDescriptor>();
    LinkedHashMap<String,EnumDescriptor> enums = new LinkedHashMap<String,EnumDescriptor>();
    ArrayList<MessageDescriptor> extendsList = new ArrayList<MessageDescriptor>();
    LinkedHashMap<String,OptionDescriptor> opts = new LinkedHashMap<String,OptionDescriptor>();

        MessageDescriptor rc = new MessageDescriptor(proto, parent);
    OptionDescriptor optionD;
    ExtensionsDescriptor extensionsD=null;
        FieldDescriptor fieldD;
        MessageDescriptor messageD;
        EnumDescriptor enumD;
        MessageDescriptor extendD;
    jj_consume_token(MESSAGE);
    name = ID();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPTION:
      case MESSAGE:
      case EXTENSIONS:
      case EXTEND:
      case ENUM:
      case REQURIED:
      case OPTIONAL:
      case REPEATED:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPTION:
        jj_consume_token(OPTION);
        optionD = OptionDescriptor();
        jj_consume_token(SEMICOLON);
          opts.put(optionD.getName(),optionD);
        break;
      case REQURIED:
      case OPTIONAL:
      case REPEATED:
        fieldD = FieldDescriptor(rc);
          fields.put(fieldD.getName(), fieldD);
        break;
      case MESSAGE:
        messageD = MessageDescriptor(proto, rc);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
          messages.put(messageD.getName(),messageD);
        break;
      case ENUM:
        enumD = EnumDescriptor(proto, rc);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
          enums.put(enumD.getName(), enumD);
        break;
      case EXTENSIONS:
        extensionsD = ExtensionsDescriptor(rc);
        jj_consume_token(SEMICOLON);
        break;
      case EXTEND:
        extendD = ExtendDescriptor(proto, rc);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
          extendsList.add(extendD);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RBRACE);
        rc.setName(name);
        rc.setFields(fields);
        rc.setMessages(messages);
        rc.setEnums(enums);
        rc.setExtensions(extensionsD);
        rc.setOptions(opts);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

/**
 * Parses something like:
 * optional string foo = 1;
 */
  final public FieldDescriptor FieldDescriptor(MessageDescriptor parent) throws ParseException {
    String rule;
    String type;
    String name;
    int tag;
    LinkedHashMap<String,OptionDescriptor> opts = new LinkedHashMap<String,OptionDescriptor>();
    LinkedHashMap<String,FieldDescriptor> fields = new LinkedHashMap<String,FieldDescriptor>();
    OptionDescriptor optionD;
        FieldDescriptor fieldD;
        FieldDescriptor rc = new FieldDescriptor(parent);
        MessageDescriptor group = new MessageDescriptor(parent.getProtoDescriptor(), parent);
    rule = Rule();
    if (jj_2_1(5)) {
      type = PackageID();
      name = ID();
      jj_consume_token(EQUALS);
      tag = Integer();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        jj_consume_token(LBRACKET);
        optionD = OptionDescriptor();
                        opts.put(optionD.getName(), optionD);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[11] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          optionD = OptionDescriptor();
                                opts.put(optionD.getName(), optionD);
        }
        jj_consume_token(RBRACKET);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GROUP:

        jj_consume_token(GROUP);
        name = ID();
        jj_consume_token(EQUALS);
        tag = Integer();
        jj_consume_token(LBRACE);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case REQURIED:
          case OPTIONAL:
          case REPEATED:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_4;
          }
          fieldD = FieldDescriptor(group);
                        fields.put(fieldD.getName(), fieldD);
        }
        jj_consume_token(RBRACE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
                type = name;
                group.setName(name);
                group.setFields(fields);
                rc.setGroup(group);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        rc.setName(name);
        rc.setType(type);
        rc.setRule(rule);
        rc.setTag(tag);
        rc.setOptions(opts);
                {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public ServiceDescriptor ServiceDescriptor(ProtoDescriptor proto) throws ParseException {
    String name;
    ArrayList<MethodDescriptor> methods = new ArrayList<MethodDescriptor>();
    MethodDescriptor method;
    jj_consume_token(SERVICE);
    name = ID();
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RPC:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      method = MethodDescriptor(proto);
      jj_consume_token(SEMICOLON);
                methods.add(method);
    }
    jj_consume_token(RBRACE);
        ServiceDescriptor rc = new ServiceDescriptor(proto);
        rc.setName(name);
        rc.setMethods(methods);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public MethodDescriptor MethodDescriptor(ProtoDescriptor proto) throws ParseException {
    String name;
    String input;
    String output;
    jj_consume_token(RPC);
    name = ID();
    jj_consume_token(LPAREN);
    input = PackageID();
    jj_consume_token(RPAREN);
    jj_consume_token(RETURNS);
    jj_consume_token(LPAREN);
    output = PackageID();
    jj_consume_token(RPAREN);
        MethodDescriptor rc = new MethodDescriptor(proto);
        rc.setName(name);
        rc.setParameter(input);
        rc.setReturns(output);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public OptionDescriptor OptionDescriptor() throws ParseException {
    String name;
    String value;
    name = ID();
    jj_consume_token(EQUALS);
    value = Value();
        OptionDescriptor rc = new OptionDescriptor();
        rc.setName(name);
        rc.setValue(value);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public MessageDescriptor ExtendDescriptor(ProtoDescriptor proto, MessageDescriptor parent) throws ParseException {
    String name;
    LinkedHashMap<String, FieldDescriptor> fields = new LinkedHashMap<String,FieldDescriptor>();
        MessageDescriptor rc = new MessageDescriptor(proto, parent);
    FieldDescriptor fieldD;
    jj_consume_token(EXTEND);
    name = ID();
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REQURIED:
      case OPTIONAL:
      case REPEATED:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      fieldD = FieldDescriptor(rc);
          fields.put(fieldD.getName(), fieldD);
    }
    jj_consume_token(RBRACE);
        rc.setName(name);
        rc.setFields(fields);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public ExtensionsDescriptor ExtensionsDescriptor(MessageDescriptor parent) throws ParseException {
        int first;
        int last;
    jj_consume_token(EXTENSIONS);
    first = Integer();
    jj_consume_token(TO);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      last = Integer();
      break;
    case MAX:
      jj_consume_token(MAX);
                last=536870911;
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        ExtensionsDescriptor rc = new ExtensionsDescriptor(parent);
        rc.setFirst(first);
        rc.setLast(last);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public EnumDescriptor EnumDescriptor(ProtoDescriptor proto, MessageDescriptor parent) throws ParseException {
    Token name;
    LinkedHashMap<String,EnumFieldDescriptor> fields = new LinkedHashMap<String,EnumFieldDescriptor>();
        EnumDescriptor rc = new EnumDescriptor(proto, parent);
    LinkedHashMap<String,OptionDescriptor> opts = new LinkedHashMap<String,OptionDescriptor>();

    EnumFieldDescriptor enumD;
    OptionDescriptor optionD;
    jj_consume_token(ENUM);
    name = jj_consume_token(ID);
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
      case PACKAGE:
      case SERVICE:
      case RPC:
      case OPTION:
      case MESSAGE:
      case EXTENSIONS:
      case EXTEND:
      case ENUM:
      case GROUP:
      case REQURIED:
      case OPTIONAL:
      case REPEATED:
      case RETURNS:
      case TO:
      case MAX:
      case ID:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_7;
      }
      if (jj_2_2(2)) {
        jj_consume_token(OPTION);
        optionD = OptionDescriptor();
        jj_consume_token(SEMICOLON);
          opts.put(optionD.getName(),optionD);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
        case PACKAGE:
        case SERVICE:
        case RPC:
        case OPTION:
        case MESSAGE:
        case EXTENSIONS:
        case EXTEND:
        case ENUM:
        case GROUP:
        case REQURIED:
        case OPTIONAL:
        case REPEATED:
        case RETURNS:
        case TO:
        case MAX:
        case ID:
          enumD = EnumFieldDescriptor(rc);
          jj_consume_token(SEMICOLON);
          fields.put(enumD.getName(),enumD);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(RBRACE);
        rc.setName(name.image);
        rc.setFields(fields);
        rc.setOptions(opts);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

/**
 * Parses something like:
 * optional string foo = 1;
 */
  final public EnumFieldDescriptor EnumFieldDescriptor(EnumDescriptor parent) throws ParseException {
    String name;
    int value=0;
    name = ID();
    jj_consume_token(EQUALS);
    value = Integer();
        EnumFieldDescriptor rc = new EnumFieldDescriptor(parent);
        rc.setName(name);
        rc.setValue(value);
        {if (true) return rc;}
    throw new Error("Missing return statement in function");
  }

  final public int Integer() throws ParseException {
    Token t;
    t = jj_consume_token(INTEGER);
        {if (true) return Integer.parseInt(t.image);}
    throw new Error("Missing return statement in function");
  }
